--- a/src/app/doctor-list/doctor-details/appointment/appointment.component.html
+++ b/src/app/doctor-list/doctor-details/appointment/appointment.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-      <form (ngSubmit)="onSubmit()" #appointmentForm="ngForm">
+      <form (ngSubmit)="onSubmit(appointmentForm)" #appointmentForm="ngForm">
         <div class="form-group">
           <label for="patientName">Patient Name</label>
           <input type="text" class="form-control" id="patientName" name="patientName" [(ngModel)]="appointment.patientName" required>
@@ -11,10 +11,10 @@
           <label for="appointmentDateTime">Appointment Date and Time</label>
           <input type="datetime-local" class="form-control" id="appointmentDateTime" name="appointmentDateTime" [(ngModel)]="appointment.appointmentDateTime" required>
         </div>
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label for="doctorId">Doctor</label>
           <input type="text" class="form-control" id="doctorId" name="doctorId" [value]="doctor.id" [(ngModel)]="appointment.doctorId" required>
-        </div>
+        </div> -->
         <div class="form-group">
           <label for="appointmentReason">Reason for Appointment</label>
           <textarea class="form-control" id="appointmentReason" name="appointmentReason" [(ngModel)]="appointment.appointmentReason" rows="3" required></textarea>
@@ -24,7 +24,7 @@
           <textarea class="form-control" id="appointmentNotes" name="appointmentNotes" [(ngModel)]="appointment.appointmentNotes" rows="3"></textarea>
         </div>
         <div class="form-group p-2">
-        <button type="submit" class="btn btn-primary ">Book Appointment</button>
+        <button type="submit" class="btn btn-primary "  [disabled]="!appointmentForm.valid" >Book Appointment</button>
         </div>
       </form>
   
@@ -32,5 +32,7 @@
   
   </div>
 </div>
+
+
 
 
