--- a/src/app/doctor-list/doctor-details/doctor-details.component.html
+++ b/src/app/doctor-list/doctor-details/doctor-details.component.html
@@ -7,15 +7,46 @@
         <div class="card-body">
 
             <div class="form-group row">
-                <label for="doctorName" class="col-sm-2 col-form-label">Doctor Name:</label>
-                <div class="col-sm-10">
+
+
+              <div class="col-sm-6">
+                <div class="row">
+                  <label for="doctorName" class="col-sm-4 col-form-label">Doctor Name:</label>
+                  <div class="col-sm-8">
                   <input type="text" readonly class="form-control-plaintext" id="doctorName" value={{doctor.doctorName}}>
+                  </div>
+                </div>   
+              </div>
+
+                <div class="col-sm-6"> 
+                  <div class="row">
+                    <label for="doctorGender" class="col-sm-4 col-form-label">Gender:</label>
+                  <div class="col-sm-8">
+                    <input type="text" readonly class="form-control-plaintext" id="doctorGender" [value]='(doctor.gender==="0")?"Male":"Female"'>
+                  </div>
+                </div>
+                  
             </div>
+              
             <div class="form-group row">
-                <label for="doctorExperience" class="col-sm-2 col-form-label">Doctor Experience:</label>
-                <div class="col-sm-10">
-                  <input type="text" readonly class="form-control-plaintext" id="doctorExperience" value={{doctor.experience}}>
-            </div>
+
+              <div class="col-sm-6">
+                <div class="row">
+                  <label for="doctorExperience" class="col-sm-4 col-form-label">Doctor Experience:</label>
+                  <div class="col-sm-8">
+                    <input type="text" readonly class="form-control-plaintext" id="doctorExperience" value={{doctor.experience}}>
+                   </div>
+                </div>
+             </div>
+             <div class="col-sm-6">
+              <div class="row">
+                <label for="doctorPhone" class="col-sm-4 col-form-label">Phone No.:</label>
+                <div class="col-sm-8">
+                  <input type="text" readonly class="form-control-plaintext" id="doctorPhone" value={{doctor.phone}}>
+                 </div>
+              </div>
+           </div>
+              
         
         </div>
     </div>  
@@ -32,4 +63,6 @@
         </div>
       </ng-template>
     
+  </div>
 </div>
+<app-appointment-list [doctor]="doctor" ></app-appointment-list>
