--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -12,6 +12,9 @@
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/doctors']">List Of Doctors</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/login']">Doctor Login</a>
+          </li>
         </ul>
       </div>
     </div>
