--- a/src/app/doctor-list/doctor-details/doctor-details.component.html
+++ b/src/app/doctor-list/doctor-details/doctor-details.component.html
@@ -65,4 +65,6 @@
     
   </div>
 </div>
-<app-appointment-list [doctor]="doctor" ></app-appointment-list>
+<div class="col-sm-12 p-5">
+  <app-appointment-list [doctor]="doctor" class="mt-5"></app-appointment-list>
+</div>
