--- a/src/app/doctor-list/appointment-list/appointment-list.component.html
+++ b/src/app/doctor-list/appointment-list/appointment-list.component.html
@@ -1,4 +1,4 @@
-<table class="table">
+<table datatable [dtOptions]="dtoptions" [dtTrigger]="dtTrigger" class="table mt-5">
     <thead>
       <tr>
         <th>Id</th>
@@ -8,7 +8,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let appointment of appointmentList | paginate: { itemsPerPage: 10, currentPage: page } ">
+      <tr *ngFor="let appointment of appointmentList ">
         <td>{{ appointment.id }}</td>
         <td>{{ appointment.patientName }}</td>
         <td>{{ pipe.transform(appointment.appointmentDateTime,'short')}}</td>
