--- a/src/app/doctor-list/appointment-list/prescription/prescription.component.html
+++ b/src/app/doctor-list/appointment-list/prescription/prescription.component.html
@@ -27,7 +27,7 @@
                 </div>
                 
               <div class="col-sm-2">
-                <button class="btn btn-danger" type="button" [disabled]="Created">X</button>
+                <button class="btn btn-danger" type="button" [disabled]="Created" (click)="DeleteMedicine(i)">X</button>
               </div>
           </div>
         </div>
@@ -48,7 +48,7 @@
                   <input type="text" class="form-control" formControlName="Dose">
                 </div>              
               <div class="col-sm-2">
-                <button class="btn btn-danger" type="button" [disabled]="Created">X</button>
+                <button class="btn btn-danger" type="button" [disabled]="Created" (click)="DeleteVaccination(i)">X</button>
               </div>
           </div>
         </div>
@@ -66,7 +66,7 @@
                 </select>
               </div>
               <div class="col-sm-2">
-                <button class="btn btn-danger" type="button" [disabled]="Created">X</button>
+                <button class="btn btn-danger" type="button" [disabled]="Created"   (click)="DeleteRadiology(i)">X</button>
               </div>
           </div>
         </div>
