--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -11,7 +11,9 @@
             <label for="password">Password</label>
             <input type="password" class="form-control" id="password" name="password" [(ngModel)]="model.password">
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <div class="col-sm-12 p-2">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
         </form>
       </div>
     </div>
