--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -7,15 +7,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" [routerLink]="['/']">Home</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" [routerLink]="['/doctors']">List Of Doctors</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" *ngIf="!islLoggedIn">
             <a class="nav-link" [routerLink]="['/login']">Doctor Login</a>
           </li>
         </ul>
+        <div class="col-sm-121" *ngIf="islLoggedIn">
+          <div class="float-right">
+            <button class="btn btn-outline-success" type="button" (click)="logout()">Logout</button>
+          </div>
+        </div>
+       
       </div>
+
     </div>
   </nav>
